--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>event-landing-template</title>
+    <title>Martina's 15th Birthday | Invitation</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Corinthia:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
